# pcbang-analyzer

./: .gitignore  Dockerfile  build.gradle  docker-compose.yml  entrypoint.sh  pyproject.toml  redeploy.sh  settings.gradle
analyzer/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
analyzer/migrations/: 0001_initial.py  0002_city_pcbang_city.py  0003_alter_city_name_alter_pcbang_address_alter_pcbang_ip_and_more.py  0004_alter_analyzehistory_options_and_more.py  0005_alter_city_options_pcbang_pc_plan_ratio.py  0006_pcbang_pc_plan_price.py
analyzer/templates/: pcbang_list.html
config/: celery.py  settings.py  urls.py
src/main/java/com/gdsanadevlog/pcbanganalyzer/: PcbangAnalyzerApplication.java
src/main/resources/: application.yml
src/main/resources/templates/common/fragments/: config.html  footer.html  header.html  sidebar.html  topbar.html
src/main/resources/templates/common/layout/: default-layout.html
src/main/resources/templates/pages/: index.html
src/main/resources/templates/pages/auth/: login-form.html  login.html  login_form.html  register-form.html  register.html
src/main/resources/templates/pages/pcbang/: pcbang-list.html
templates/: layout.html
templates/analyzer/: analyze-history-list.html  analyzehistory_daily.html  analyzehistory_monthly.html  city-delete.html  city-form.html  city-list.html  index.html  pcbang-delete.html  pcbang-form.html  pcbang-list.html
templates/auth/: _login.html
templates/components/: footer.html  header.html  navbar.html  sidebar.html
(+26 files in other folders)
