[tool.poetry]
name = "pcbang-analyzer"
version = "0.1.0"
description = ""
authors = ["tgoddessana <twicegoddessana1229@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
black = "^24.4.2"
bpython = "^0.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
