[tool.poetry]
name = "pcbang-analyzer"
version = "0.1.0"
description = ""
authors = ["tgoddessana <twicegoddessana1229@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
black = "^24.4.2"
bpython = "^0.24"
celery = "^5.4.0"
redis = "^5.0.7"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
